# pdf-visualize-translate

./: .gitignore  README.md  README_zh-CN.md  build.py  config_template.json  llm_credentials_template.json  main.py  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: ConfigPanel.vue  PDFViewer.vue  PageNavigation.vue  TranslationPanel.vue
frontend/src/utils/: common.js
