[project]
authors = [
  {name = "Anderson", email = "andersonby@163.com"},
]
dependencies = [
  "pymupdf>=1.24.7",
  "pillow>=10.4.0",
  "flask>=3.0.3",
  "vectorvein>=0.1.0",
  "pyinstaller>=6.9.0",
]
description = "Default template for PDM package"
license = {text = "MIT"}
name = "pdf-translate"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
build = "pyinstaller main.spec --noconfirm"
start.cmd = "python main.py"
start.env = {PDF_VISUALIZE_TRANSLATE_DEBUG = "1"}
